--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
       <p>Albert Einstein</p>
       <p style="background-color: #009999;">I'm just trying to get my life together</p>
     </div>
+
+     <!-- Message from Gustavo -->
+    <div class="w3-panel w3-leftbar w3-light-grey">
+      <p class="w3-xlarge w3-serif">
+      <i>How does this work again? Oh like this.</i></p>
+      <p>Thanks internet.</p>
+    </div>
+    <!-- Ende message from Gustavo -->
+
     <!-- Message from Nikhil-->
     
 
